# edw_framework

./: .gitignore  CODEOWNERS  Pipfile  README.md  m_WM_Asn.py  m_WM_Asn_Detail.py  m_WM_E_Act.py  m_WM_E_Act_Elm.py  m_WM_E_Act_Elm_Crit.py  m_WM_E_Aud_Log.py  m_WM_E_Elm.py  m_WM_E_Emp_Stat_Code.py  m_WM_E_Msrmnt.py  m_WM_E_Msrmnt_Rule_Condition.py  m_WM_Ilm_Appointment_Type.py  m_WM_Ilm_Task_Status.py  m_Wm_Ilm_Appointments.py  pyproject.toml  requirements.sh  requirements.txt
.databricks/: .databricks.env  project.json
Bladebridge/configs/: infa2databricks_expr.json  infa2pyspark_ext.pl  petsmart_infapc2pyspark_databricksjobs.json
Bladebridge/informatica/: BA_WMS_wf_WMS_To_SCDS_Every_4_Hrs.xml
Datalake/Int_Services/: m_Automated_Reminder_Calls_PetsHotel_ff.py
Datalake/Production/: stranger_things_for_ingestion_metadata.sql
Datalake/bugs_tech_enabler_prod_deploy/: DNM-5881 - ingestion_metadata to stranger_things.sql
Datalake/data_harness/: Data Harness.py  tableList_WMS_To_SCDS_4hr.csv  tableList_WMS_To_SCDS_Daily.csv  tableList_wf_Petshotel_Accrual.csv  tableList_wf_SVC_Service_Suspension_Log.csv  wf_Petshotel_Accrual_harness.py  wf_SVC_Service_Suspension_Log.py
Datalake/frameworks/: IngestSF2Delta.py
Datalake/utils/: BatchTransferManager.py  CDC.py  DeltaLakeWriter.py  IngestSF2Delta.py  JDBC_Egress.py  SF_CDC.py  SF_Ingest_PII.py  SF_Ingest_v2.py  SF_Lgcy_Ingest.py  SF_Merge_Utils.py  SF_Merge_Utils_v2.py  SF_append_legacy_v2.py  SF_ingest.py  SF_overWrite_append.py  SF_overWrite_append_legacy.py  SnowflakeCDCWriter.py  configs.py  genericUtilities.py  (+4 more)
(+1740 files in other folders)
