[tool.poetry]
name = "nz-databricks-migration"
version = "0.1.0"
description = "Petsmart migration of Netezza to Databricks PySpark"
authors = ["Databricks"]
readme = "README.md"
packages = [{include = "nz_databricks_migration"}]

[tool.poetry.dependencies]
python = "3.10.*"
databricks-connect = "^13.1.0"
databricks-cli = "^0.17.7"
deepdiff = "^6.3.0"
databricks-sdk = "0.1.6"
py-automapper = "^1.2.3"
pydantic = "1.10.6"
retry = "^0.9.2"
pyspark = "3.4.1"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
